# x-ray-tube

./: README.md
HVL/: hvl_math.py  ph_spectr.csv
HVL/NIST Tables/: Aluminum.csv  Copper.csv  Water.csv
Phantom Irradiation/: source_cut_c.py  source_cut_s.py  source_many.py
Phantom Irradiation/col5/: CMakeLists.txt  tube.cc
Phantom Irradiation/col5/include/: PhysicsList.hh  PrimaryGeneratorAction.hh
Phantom Irradiation/col5/src/: DetectorConstruction.cc  PhysicsList.cc
RAD-44 Tube/cu0.0225 with al0.7+cu0.025/include/: run.hh
RAD-44 Tube/cu0.0225 with al0.7+cu0.025/src/: DetectorSensitive.cc
RAD-44 Tube/cu0.0225 with al0.7+none/include/: DetectorConstruction.hh
RAD-44 tube/: root.py
RAD-44 tube/cu0.0225 with al0.7+cu0.025/src/: ActionInitialization.cc
RAD-44 tube/cu0.0225 with al0.7+none/include/: DetectorSensitive.hh
RAD-44 tube/cu0.0225 with al0.7+none/src/: DetectorConstruction.cc
phantom irradiation/: mesh_data.m  source_cut_s.py
phantom irradiation/col5/include/: ActionInitialization.hh  DetectorConstruction.hh
phantom irradiation/col5/src/: ActionInitialization.cc
tube/: test.sh
tube/cu0.0225 with al0.7+cu0.025/: run.mac  tube.cc
tube/cu0.0225 with al0.7+cu0.025/include/: DetectorConstruction.hh
tube/cu0.0225 with al0.7+cu0.025/src/: DetectorConstruction.cc  PrimaryGeneratorAction.cc  run.cc
tube/cu0.0225 with al0.7+none/include/: ActionInitialization.hh  PhysicsList.hh  PrimaryGeneratorAction.hh
tube/cu0.0225 with al0.7+none/src/: PhysicsList.cc
